added noise to ai

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@
 *.exe
 *.out
 *.app
+/Buckland_Chapter7 to 10_Raven/Raven___Win32_boundschecker
+/Buckland_Chapter7 to 10_Raven/.idea/.idea.Raven/.idea
