--- a/Buckland_Chapter7 to 10_Raven/Params.ini
+++ b/Buckland_Chapter7 to 10_Raven/Params.ini
@@ -120,7 +120,7 @@ Bolt_MaxSpeed    = 5
 Bolt_Mass        = 1
 Bolt_MaxForce    = 100.0
 Bolt_Scale       = 0.8
-Bolt_Damage      = 1
+Bolt_Damage      = 10
 
 
 
@@ -135,7 +135,7 @@ Rocket_MaxSpeed    = 3
 Rocket_Mass        = 1
 Rocket_MaxForce    = 10.0
 Rocket_Scale       = 0.8
-Rocket_Damage      = 10
+Rocket_Damage      = 100
 # how fast the explosion occurs (in secs)
 Rocket_ExplosionDecayRate = 2.0
 
@@ -151,7 +151,7 @@ Slug_Mass        = 0.1
 Slug_MaxForce    = 10000.0
 Slug_Scale       = 0.8
 Slug_Persistance = 0.2
-Slug_Damage      = 10
+Slug_Damage      = 100
 
 
 
@@ -168,7 +168,9 @@ Pellet_Mass        = 0.1
 Pellet_MaxForce    = 1000.0
 Pellet_Scale       = 0.8
 Pellet_Persistance = 0.1
-Pellet_Damage      = 1
+Pellet_Damage      = 10
+
+Dataset_Size = 200
 
 
   
